update interface doc